--- a/aemdesign-aem-compose/src/core/scss/elements/_link.scss
+++ b/aemdesign-aem-compose/src/core/scss/elements/_link.scss
@@ -6,4 +6,9 @@ a {
     font-size: icon-size('small');
     margin-left: 8px;
   }
+
+  // Hide links without an `href` attribute from the screen
+  &:not([href]) {
+    @include sr-only;
+  }
 }
